--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+*v0.2* (2010-04-25)
+
+* Rewrite of border-radius extension
+* Addition of box-shadow extension
+
 *v0.1* (2010-04-24)
 
 * Initial checkin of revised border-radius module
