--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+*v0.3.1* (2010-05-03)
+
+* Bug fix for IE (match() won't always return an array)
+
 *v0.3* (2010-05-02)
 
 * Bug fix for RGB/HSL box-shadows
