--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+*v0.3.3* (2010-05-29)
+
+* Minor tweak to the way masked colors are replaced in RGBa-based drop shadows
+
 *v0.3.2* (2010-05-25)
 
 * Minor tweak to the undefined clause and a fix to a double webkit test
