--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-== eCSStender.CSS3-borders-and-backgrounds.js
+== eCSStender.CSS3-backgrounds-and-borders.js
 
-An implementation of the CSS3 Borders and Backgrounds module using eCSStender.
+An implementation of the CSS3 Backgrounds and Borders module using eCSStender.
 
 == Requirements
 
@@ -12,11 +12,21 @@ See the CHANGELOG file for information on what's new.
 
 == The distribution
 
-Besides the eCSStender.CSS3-borders-and-backgrounds.js file in /src, there's a
+Besides the eCSStender.CSS3-backgrounds-and-borders.js file in /src, there's a
 test tree (/test) included which holds assorted tests for the module and you 
 can find a minified version of the script in /min.
 
+== Submodules
+
+The following submodules are included in the /test folder and will need updating:
+
+* eCSStender
+
+To update, run this in the root folder of the project: 
+
+$> git submodule init && git submodule update
+
 == License
 
-eCSStender.CSS3-borders-and-backgrounds.js is licensed under the terms of the 
+eCSStender.CSS3-backgrounds-and-borders.js is licensed under the terms of the 
 MIT License, see the included MIT-LICENSE file.
