--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+*v0.3.5* (2010-07-07)
+
+* fixed a few bugs in the shadow implementation for Microsoft (expanding color shorthand and parsing out direction better)
+* merged latest eCSStender version
+
 *v0.3.4* (2010-06-16)
 
 * Fixes for initial Webkit tests to include spread support (introduced in Safari 5)
